GNOME Bugzilla – Bug 768355
Incorrect initial conditions for nautilus-files-view.c while updating the action state
Last modified: 2016-09-22 09:37:59 UTC
Created attachment 330821 [details] [review] Make initial condtions same with the ones in update_selection_menu() See it in patch This could cause the issue when user have icons on desktop and a USB disk was plugged in. It will not show "eject" option on the selection menu. Thanks
Created attachment 334510 [details] [review] Patch rebased on top of nautilus 3.21.91
Review of attachment 334510 [details] [review]: Oh yeah it makes sense. Sorry Tyang it took so long to review, it slipped by. About this patch, it lacks a commit message. Please follow https://wiki.gnome.org/Newcomers/CodeContributionWorkflow#Commit_guidelines for it. Thanks for the patch!
:) OK! Thanks
Created attachment 334594 [details] [review] Patch with commit message Patch for this issue Thanks
Review of attachment 334594 [details] [review]: "In code base, incorrect initial conditions result in no detection for updating the actions status" This sounds slightly confusing for someone that doesn't read the code before. How about "we were not setting the actions visibility correctly, which makes for example the "Eject" selection menu item not showing up." "This patch will provide the correct initial conditions in real_update_actions_state()." not need for functions names, instead how about just "The patch sets the correct initial conditions"
Review of attachment 334594 [details] [review]: Also please obsolete the patches in the bug report that are no longer valid
(In reply to Carlos Soriano from comment #5) > Review of attachment 334594 [details] [review] [review]: > > "In code base, incorrect initial conditions result in no detection for > updating the actions status" > This sounds slightly confusing for someone that doesn't read the code > before. How about "we were not setting the actions visibility correctly, > which makes for example the "Eject" selection menu item not showing up." > > "This patch will provide the correct initial conditions in > real_update_actions_state()." > not need for functions names, instead how about just "The patch sets the > correct initial conditions" That's OK Thanks
Created attachment 335333 [details] [review] Modified patch file Thanks!
Review of attachment 335333 [details] [review]: Perfect, thanks!