nautilus-files-view: modify initial conditions

When icons are enabled on desktop, we should be able to "eject"
the mountable devices on the selection menu. We were not setting
the actions visiblity correctly, which makes for example the "eject"
selection menu item not showing up.
This patch sets the correct initial conditions.

https://bugzilla.gnome.org/show_bug.cgi?id=768355